# revenium-middleware-anthropic-python

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
examples/: README.md  anthropic-advanced.py  anthropic-basic.py  anthropic-bedrock.py  anthropic-streaming.py  example_decorator.py  getting_started.py  trace_visualization_example.py
revenium_middleware_anthropic/: __init__.py  bedrock_adapter.py  middleware.py  provider.py  trace_fields.py
tests/: conftest.py  test_bedrock_adapter.py  test_environment_integration.py  test_middleware.py  test_middleware_integration.py  test_optional_dependencies.py  test_provider.py  test_trace_visualization.py
tests/e2e/: README.md  run_all_baseline_tests.py  test_01_required_fields.py  test_02_nested_metadata.py  test_03_flat_metadata_current.py  test_04_streaming.py
