[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revenium-middleware-anthropic"
version = "0.4.0"
description = "A Python library that meters Anthropic usage to Revenium."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Revenium", email = "info@revenium.io" }
]
dependencies = [
    "wrapt",
    "anthropic",
    "revenium_middleware>=0.3.5",
    "python-dotenv"
]
keywords = ["anthropic", "middleware", "logging", "token-usage", "metering", "revenium", "aws", "bedrock", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
"Homepage" = "https://github.com/revenium/revenium-middleware-anthropic-python"
"Bug Tracker" = "https://github.com/revenium/revenium-middleware-anthropic-python/issues"
"Documentation" = "https://github.com/revenium/revenium-middleware-anthropic-python/blob/HEAD/README.md"
"Changelog" = "https://github.com/revenium/revenium-middleware-anthropic-python/blob/HEAD/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "flake8",
    "black",
    "mypy",
    "freezegun"
]
bedrock = [
    "boto3>=1.34.0,<2"
]

[tool.setuptools]
packages = ["revenium_middleware_anthropic"]

[tool.setuptools.package-data]
revenium_middleware_anthropic = ["py.typed"]
